Fix dragging handle on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@
 .wheel>* {
   pointer-events: none;
   user-select   : none;
+  touch-action  : none;
 }
 
 .player-row {
